# Beresta

./: .gitignore  CMakeLists.txt  README.md
App/: CMakeLists.txt
App/include/: core.h  directory_node.h  document.h  menubar.h  window.h
App/src/: directory_node.cpp  document.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp  main.cpp  menubar.cpp  window.cpp
Test/: CMakeLists.txt
Test/src/: test_main.cpp
